[package]
name = "mineclone"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "25.0.2"
log = "0.4.27"
winit = "0.30.11"
anyhow = "1.0.98"
cgmath = "0.18.0"
tokio = { version = "1.45.1", features = ["full"] }
image = { version = "0.25.6", features = ["png", "jpeg"] }
bytemuck = "1.23.0"
tobj = { version = "4.0.3", default-features = false, features = ["tokio"] }

[build-dependencies]
anyhow = "1.0.98"
fs_extra = "1.3.0"
glob = "0.3.2"
